@startuml

entity "chung_chi" as chung_chi {
	* ma_chung_chi
	+ ten_chung_chi
	+ tong_so_tin_chi
	+ muc_hoc_phi
}

entity "mon_hoc" as mon_hoc {
	* ma_mon_hoc
	+ ten_mon_hoc
	+ so_tin_chi_mon_hoc
}

entity "lop_hoc" as lop_hoc {
	* ma_lop
	+ ten_lop
	+ ngay_bat_dau_hoc
	+ ngay_ket_thuc
	+ so_hoc_vien_toi_da_du_kien
}

entity "bao_gom" as bao_gom {
}

chung_chi |o--|{ lop_hoc

bao_gom |o--|{ chung_chi

bao_gom |o--|{ mon_hoc

@enduml